--- a/KooliProjekt/Views/Tournaments/Index.cshtml
+++ b/KooliProjekt/Views/Tournaments/Index.cshtml
@@ -21,6 +21,7 @@
             <th>Title</th>
 
             <th>Title</th>
+            @(await Component.InvokeAsync<PagerViewComponent>(Model))
 
             <th></th>
         </tr>
