--- a/KooliProjekt/Views/Shared/components/Pager/Default.cshtml
+++ b/KooliProjekt/Views/Shared/components/Pager/Default.cshtml
@@ -1,7 +1,10 @@
 ﻿@model PagedResultBase
+
 @{
     var urlTemplate = Url.Action() + "?page={0}";
     var request = ViewContext.HttpContext.Request;
+
+    // Присоединяем все параметры запроса, кроме "page"
     foreach (var key in request.Query.Keys)
     {
         if (key == "page")
@@ -12,32 +15,43 @@
         urlTemplate += "&" + key + "=" + request.Query[key];
     }
 
+    // Вычисляем стартовый и конечный индексы для пагинации
     var startIndex = Math.Max(Model.CurrentPage - 5, 1);
     var finishIndex = Math.Min(Model.CurrentPage + 5, Model.PageCount);
 }
 
 <div class="row">
-    @* <div class="col-md-4 col-sm-4 items-info">
-        Items @Model.FirstRowOnPage to @Model.LastRowOnPage of @Model.RowCount total
-    </div> *@
     <div class="col-md-8 col-sm-8">
         @if (Model.PageCount > 1)
         {
-            <ul class="pagination pull-right">
-                <li><a href="@urlTemplate.Replace("{0}", "1")">&laquo;</a></li>
-                @for (var i = startIndex; i <= finishIndex; i++)
+        <ul class="pagination pull-right">
+            <!-- Стрелка на первую страницу -->
+            <li>
+                <a href="@urlTemplate.Replace("{0}", "1")" title="Первая страница">&laquo;</a>
+            </li>
+
+            <!-- Страницы -->
+            @for (var i = startIndex; i <= finishIndex; i++)
                 {
-                    @if (i == Model.CurrentPage)
+            @if (i == Model.CurrentPage)
                     {
-                        <li><span>@i</span></li>
+            <li class="active">
+                <span>@i</span>
+            </li>
                     }
                     else
                     {
-                        <li><a href="@urlTemplate.Replace("{0}", i.ToString())">@i</a></li>
+            <li>
+                <a href="@urlTemplate.Replace("{0}", i.ToString())">@i</a>
+            </li>
                     }
                 }
-                <li><a href="@urlTemplate.Replace("{0}", Model.PageCount.ToString())">&raquo;</a></li>
-            </ul>
+
+            <!-- Стрелка на последнюю страницу -->
+            <li>
+                <a href="@urlTemplate.Replace("{0}", Model.PageCount.ToString())" title="Последняя страница">&raquo;</a>
+            </li>
+        </ul>
         }
     </div>
 </div>
