--- a/KooliProjekt/Views/Tournaments/Index.cshtml
+++ b/KooliProjekt/Views/Tournaments/Index.cshtml
@@ -1,56 +1,54 @@
 ﻿@model PagedResult<Tournament>
 
-@{
-    ViewData["Title"] = "Index";
-}
+    @{
+    ViewData["Title"] = "Tournament List";
+    }
 
-<h1>Index</h1>
+    <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Title</th>
-           
-            <th>Title</th>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 
-            <th>Title</th>
-
-            <th>Title</th>
-
-            <th>Title</th>
-            @(await Component.InvokeAsync<PagerViewComponent>(Model))
-
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Results)
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Tournament Name</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Part</th>
+                <th>Information</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Results)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TournmentName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TournamentStart)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TournamentEnd)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TournamentPart)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TournamentInfo)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TournmentName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TournamentStart.ToString("yyyy-MM-dd"))
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TournamentEnd.ToString("yyyy-MM-dd"))
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TournamentPart)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TournamentInfo)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this tournament?');">Delete</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+
+    <!-- Пагинация -->
+    @(await Component.InvokeAsync<PagerViewComponent>(Model))
