--- a/KooliProjekt/Views/rankings/Index.cshtml
+++ b/KooliProjekt/Views/rankings/Index.cshtml
@@ -1,41 +1,42 @@
-﻿@model PagedResult<ranking>
+﻿@model PagedResult<Ranking>
 
-
-@{
+    @{
     ViewData["Title"] = "Index";
-}
+    }
 
-<h1>Index</h1>
+    <h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Title</th>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 
-            <th>Title</th>
-
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Results)
+    <table class="table">
+        <thead>
+            <tr>
+                <th>User ID</th>
+                <th>Total Points</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Results)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalPoint)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPoint)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this ranking?');">Delete</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+
+    <!-- Пагинация -->
+    @(await Component.InvokeAsync<PagerViewComponent>(Model))
