--- a/KooliProjekt/Views/Shared/components/Pager/Default.cshtml
+++ b/KooliProjekt/Views/Shared/components/Pager/Default.cshtml
@@ -1,57 +1,26 @@
-﻿@model PagedResultBase
+﻿@model PagedResult<Match>
 
-@{
-    var urlTemplate = Url.Action() + "?page={0}";
-    var request = ViewContext.HttpContext.Request;
-
-    // Присоединяем все параметры запроса, кроме "page"
-    foreach (var key in request.Query.Keys)
+<div class="pagination">
+    @for (int i = 1; i <= Model.PageCount; i++)
     {
-        if (key == "page")
-        {
-            continue;
-        }
-
-        urlTemplate += "&" + key + "=" + request.Query[key];
+            <a href="?page=@i&pageSize=@Model.PageSize" 
+               class="@(i == Model.PageNumber ? "active" : "")">
+            @i
+            </a>
     }
-
-    // Вычисляем стартовый и конечный индексы для пагинации
-    var startIndex = Math.Max(Model.CurrentPage - 5, 1);
-    var finishIndex = Math.Min(Model.CurrentPage + 5, Model.PageCount);
-}
-
-<div class="row">
-    <div class="col-md-8 col-sm-8">
-        @if (Model.PageCount > 1)
-        {
-        <ul class="pagination pull-right">
-            <!-- Стрелка на первую страницу -->
-            <li>
-                <a href="@urlTemplate.Replace("{0}", "1")" title="Первая страница">&laquo;</a>
-            </li>
-
-            <!-- Страницы -->
-            @for (var i = startIndex; i <= finishIndex; i++)
-                {
-            @if (i == Model.CurrentPage)
-                    {
-            <li class="active">
-                <span>@i</span>
-            </li>
-                    }
-                    else
-                    {
-            <li>
-                <a href="@urlTemplate.Replace("{0}", i.ToString())">@i</a>
-            </li>
-                    }
-                }
-
-            <!-- Стрелка на последнюю страницу -->
-            <li>
-                <a href="@urlTemplate.Replace("{0}", Model.PageCount.ToString())" title="Последняя страница">&raquo;</a>
-            </li>
-        </ul>
-        }
-    </div>
 </div>
+
+<style>
+    .pagination { margin: 20px 0; }
+    .pagination a {
+        padding: 8px 12px;
+        border: 1px solid #ddd;
+        margin: 0 2px;
+        text-decoration: none;
+    }
+    .pagination a.active {
+        background: #007bff;
+        color: white;
+        border-color: #007bff;
+    }
+</style>
