--- a/KooliProjekt/Views/Predictions/Delete.cshtml
+++ b/KooliProjekt/Views/Predictions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model KooliProjekt.Data.Prediction
+﻿@model KooliProjekt.Models.Prediction
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MacthId)
+            @Html.DisplayNameFor(model => model.MatchId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MacthId)
+            @Html.DisplayFor(model => model.MatchId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UserId)
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PredictedScroteFirstTeam)
+            @Html.DisplayNameFor(model => model.PredictedScoreFirstTeam)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PredictedScroteFirstTeam)
+            @Html.DisplayFor(model => model.PredictedScoreFirstTeam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PredictedScoreSecondTeam)
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.PredictedScoreSecondTeam)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.punktid)
+            @Html.DisplayNameFor(model => model.Punktid)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.punktid)
+            @Html.DisplayFor(model => model.Punktid)
         </dd>
     </dl>
     
