--- a/KooliProjekt/Views/Predictions/Details.cshtml
+++ b/KooliProjekt/Views/Predictions/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model KooliProjekt.Data.Prediction
+﻿@model KooliProjekt.Models.Prediction
 
 @{
     ViewData["Title"] = "Details";
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MacthId)
+            @Html.DisplayNameFor(model => model.MatchId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MacthId)
+            @Html.DisplayFor(model => model.MatchId)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UserId)
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PredictedScroteFirstTeam)
+            @Html.DisplayNameFor(model => model.PredictedScoreFirstTeam)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PredictedScroteFirstTeam)
+            @Html.DisplayFor(model => model.PredictedScoreFirstTeam)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PredictedScoreSecondTeam)
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.PredictedScoreSecondTeam)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.punktid)
+            @Html.DisplayNameFor(model => model.Punktid)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.punktid)
+            @Html.DisplayFor(model => model.Punktid)
         </dd>
     </dl>
 </div>
