--- a/KooliProjekt/Views/Predictions/Edit.cshtml
+++ b/KooliProjekt/Views/Predictions/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model KooliProjekt.Data.Prediction
+﻿@model KooliProjekt.Models.Prediction
 
 @{
     ViewData["Title"] = "Edit";
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="MacthId" class="control-label"></label>
-                <input asp-for="MacthId" class="form-control" />
-                <span asp-validation-for="MacthId" class="text-danger"></span>
+                <label asp-for="MatchId" class="control-label"></label>
+                <input asp-for="MatchId" class="form-control" />
+                <span asp-validation-for="MatchId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
@@ -24,9 +24,9 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PredictedScroteFirstTeam" class="control-label"></label>
-                <input asp-for="PredictedScroteFirstTeam" class="form-control" />
-                <span asp-validation-for="PredictedScroteFirstTeam" class="text-danger"></span>
+                <label asp-for="PredictedScoreFirstTeam" class="control-label"></label>
+                <input asp-for="PredictedScoreFirstTeam" class="form-control" />
+                <span asp-validation-for="PredictedScoreFirstTeam" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PredictedScoreSecondTeam" class="control-label"></label>
@@ -34,9 +34,9 @@
                 <span asp-validation-for="PredictedScoreSecondTeam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="punktid" class="control-label"></label>
-                <input asp-for="punktid" class="form-control" />
-                <span asp-validation-for="punktid" class="text-danger"></span>
+                <label asp-for="Punktid" class="control-label"></label>
+                <input asp-for="Punktid" class="form-control" />
+                <span asp-validation-for="Punktid" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
