--- a/KooliProjekt/Views/Teams/Create.cshtml
+++ b/KooliProjekt/Views/Teams/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="TeamName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TeamPlayers" class="control-label"></label>
-                <input asp-for="TeamPlayers" class="form-control" />
-                <span asp-validation-for="TeamPlayers" class="text-danger"></span>
+                <label asp-for="Players" class="control-label"></label>
+                <input asp-for="Players" class="form-control" />
+                <span asp-validation-for="Players" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
