--- a/KooliProjekt/Views/Teams/Delete.cshtml
+++ b/KooliProjekt/Views/Teams/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.TeamName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TeamPlayers)
+            @Html.DisplayNameFor(model => model.Players)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TeamPlayers)
+            @Html.DisplayFor(model => model.Players)
         </dd>
     </dl>
     
