--- a/KooliProjekt/Views/Predictions/Index.cshtml
+++ b/KooliProjekt/Views/Predictions/Index.cshtml
@@ -1,46 +1,44 @@
-﻿@using KooliProjekt.Models
-@model PagedResult<Prediction>
+﻿@model KooliProjekt.Models.PagedResult<KooliProjekt.Models.Prediction>
 
-
-    @{
+@{
     ViewData["Title"] = "Index";
+}
+
+<h1>@ViewData["Title"]</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Match ID</th>
+            <th>User ID</th>
+            <th>Predicted Score (First Team)</th>
+            <th>Predicted Score (Second Team)</th>
+            <th>Points</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+    @foreach (var item in Model.Items) 
+    {
+        <tr>
+            <td>@Html.DisplayFor(modelItem => item.MatchId)</td>
+            <td>@Html.DisplayFor(modelItem => item.UserId)</td>
+            <td>@Html.DisplayFor(modelItem => item.PredictedScoreFirstTeam)</td>
+            <td>@Html.DisplayFor(modelItem => item.PredictedScoreSecondTeam)</td>
+            <td>@Html.DisplayFor(modelItem => item.Punktid)</td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" 
+                   onclick="return confirm('Are you sure you want to delete this prediction?');">Delete</a>
+            </td>
+        </tr>
     }
+    </tbody>
+</table>
 
-    <h1>@ViewData["Title"]</h1>
-
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Match ID</th>
-                <th>User ID</th>
-                <th>Predicted Score (First Team)</th>
-                <th>Predicted Score (Second Team)</th>
-                <th>Points</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        @foreach (var item in Models.Results)
-        {
-            <tr>
-                <td>@Html.DisplayFor(modelItem => item.MatchId)</td>
-                <td>@Html.DisplayFor(modelItem => item.UserId)</td>
-                <td>@Html.DisplayFor(modelItem => item.PredictedScoreFirstTeam)</td>
-                <td>@Html.DisplayFor(modelItem => item.PredictedScoreSecondTeam)</td>
-                <td>@Html.DisplayFor(modelItem => item.Points)</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this prediction?');">Delete</a>
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
-
-    <!-- Пагинация -->
-    @(await Component.InvokeAsync<PagerViewComponent>(Model))
+@(await Component.InvokeAsync<PagerViewComponent>(Model)) 
