--- a/KooliProjekt/Views/rankings/Create.cshtml
+++ b/KooliProjekt/Views/rankings/Create.cshtml
@@ -22,9 +22,9 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TotalPoint" class="control-label"></label>
-                <input asp-for="TotalPoint" class="form-control" />
-                <span asp-validation-for="TotalPoint" class="text-danger"></span>
+                <label asp-for="TotalPoints" class="control-label"></label>
+                <input asp-for="TotalPoints" class="form-control" />
+                <span asp-validation-for="TotalPoints" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
