--- a/KooliProjekt/Views/rankings/Delete.cshtml
+++ b/KooliProjekt/Views/rankings/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.UserId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TotalPoint)
+            @Html.DisplayNameFor(model => model.TotalPoints)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TotalPoint)
+            @Html.DisplayFor(model => model.TotalPoints)
         </dd>
     </dl>
     
