--- a/KooliProjekt/Views/rankings/Edit.cshtml
+++ b/KooliProjekt/Views/rankings/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TotalPoint" class="control-label"></label>
-                <input asp-for="TotalPoint" class="form-control" />
-                <span asp-validation-for="TotalPoint" class="text-danger"></span>
+                <label asp-for="TotalPoints" class="control-label"></label>
+                <input asp-for="TotalPoints" class="form-control" />
+                <span asp-validation-for="TotalPoints" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
