--- a/KooliProjekt/Views/Matches/Index.cshtml
+++ b/KooliProjekt/Views/Matches/Index.cshtml
@@ -67,10 +67,8 @@ else
             {
                         <tr>
                             <td>@match.Id</td>
-                            <td>@match.FirstTeam.TeamName</td>
-                            <td>@match.SecondTeam.TeamName</td>
-                            <td>@match.GameStart.ToString("yyyy-MM-dd")</td>
-                            <td>@match.Tournament.Name</td>
+                            <td>@match.HomeMatches</td>
+                            <td>@match.AwayMatches</td>
                         </tr>
             }
             </tbody>
