--- a/KooliProjekt/Views/Predictions/Index.cshtml
+++ b/KooliProjekt/Views/Predictions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model KooliProjekt.Models.PagedResult<KooliProjekt.Models.Prediction>
+﻿@model KooliProjekt.Models.MatchesIndexModel
 
 @{
     ViewData["Title"] = "Index";
