--- a/KooliProjekt/Views/Teams/Index.cshtml
+++ b/KooliProjekt/Views/Teams/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model KooliProjekt.Models.PagedResult<KooliProjekt.Models.Team>
+﻿@model KooliProjekt.Models.MatchesIndexModel
 
 @{
     ViewData["Title"] = "Team List";
