--- a/KooliProjekt/Views/Tournaments/Index.cshtml
+++ b/KooliProjekt/Views/Tournaments/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model KooliProjekt.Models.PagedResult<KooliProjekt.Models.Tournament>
+﻿@model KooliProjekt.Models.MatchesIndexModel
 
 @{
     ViewData["Title"] = "Tournament List";
