--- a/KooliProjekt/Views/Shared/components/Pager/Default.cshtml
+++ b/KooliProjekt/Views/Shared/components/Pager/Default.cshtml
@@ -1,42 +1,43 @@
-﻿@model PagedResult<Match>
-
-@if (Model?.PageCount > 1)
-{
-        <div class="pagination">
-        @{
-            var queryParams = Context.Request.Query
-                .Where(q => q.Key != "page")
-                .ToDictionary(q => q.Key, q => q.Value.ToString());
-        }
-
-        @for (int i = 1; i <= Model.PageCount; i++)
+﻿@model PagedResultBase
+@{
+    var urlTemplate = Url.Action() + "?page={0}";
+    var request = ViewContext.HttpContext.Request;
+    foreach (var key in request.Query.Keys)
+    {
+        if (key == "page")
         {
-            queryParams["page"] = i.ToString();
-            queryParams["pageSize"] = Model.PageSize.ToString();
-
-                    <a href="@Url.Action(null, queryParams)" 
-                       class="btn btn-outline-primary @(i == Model.Page ? "active" : "")">
-                @i
-                    </a>
+            continue;
         }
-        </div>
+
+        urlTemplate += "&" + key + "=" + request.Query[key];
+    }
+
+    var startIndex = Math.Max(Model.CurrentPage - 5, 1);
+    var finishIndex = Math.Min(Model.CurrentPage + 5, Model.PageCount);
 }
 
-<style>
-    .pagination {
-        margin: 20px 0;
-        display: flex;
-        gap: 5px;
-        flex-wrap: wrap;
-    }
-
-    .pagination a.active {
-        background: #007bff;
-        color: white;
-        border-color: #007bff;
-    }
-
-    .pagination a:hover:not(.active) {
-        background-color: #f8f9fa;
-    }
-</style>
+<div class="row">
+    @* <div class="col-md-4 col-sm-4 items-info">
+    Items @Model.FirstRowOnPage to @Model.LastRowOnPage of @Model.RowCount total
+    </div> *@
+    <div class="col-md-8 col-sm-8">
+        @if (Model.PageCount > 1)
+        {
+            <ul class="pagination pull-right">
+                <li><a href="@urlTemplate.Replace("{0}", "1")">&laquo;</a></li>
+                @for (var i = startIndex; i <= finishIndex; i++)
+                {
+                    @if (i == Model.CurrentPage)
+                    {
+                        <li><span>@i</span></li>
+                    }
+                    else
+                    {
+                        <li><a href="@urlTemplate.Replace("{0}", i.ToString())">@i</a></li>
+                    }
+                }
+                <li><a href="@urlTemplate.Replace("{0}", Model.PageCount.ToString())">&raquo;</a></li>
+            </ul>
+        }
+    </div>
+</div>
